inital task jcq submodule added

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "React sessions 1 & 2 - Morning & Afternoon/apiTableDemo"]
 	path = React sessions 1 & 2 - Morning & Afternoon/apiTableDemo
 	url = https://github.com/ajaysr047/react_api_table_demo.git
+[submodule "Code Quality Java - Morning/initialTask"]
+	path = Code Quality Java - Morning/initialTask
+	url = https://github.com/ajaysr047/jcqInitalTask.git
